# Thesis

./: .gitignore  README.md
Benchmarking/: readme.txt
Benchmarking/BenchmarkingData/: Multicast Results  readme.txt
Benchmarking/Communication/kafka/consumer/: consumer.cpp
Benchmarking/Communication/kafka/producer/: producer.cpp
Benchmarking/Communication/rest/Python/Python-sender/: Send.py
Benchmarking/Communication/rest/Scripts/: spam.sh
Benchmarking/Communication/rest/k6/: test.js
Benchmarking/Communication/sockets/client/: client.cpp
Benchmarking/Communication/sockets/client-new-con/: client-new-con.cpp
Benchmarking/Communication/sockets/server/: server.cpp
Benchmarking/Communication/udp/receiver/: receiver  receiver.cpp
Benchmarking/Communication/udp/sender/: sender.cpp
Benchmarking/DataGen/: gen.cpp  readme.txt
Benchmarking/DataGen/outputs/: 0-2000-0.670000-0-04-04-2025 00-46-52.txt  1000-50000-0.670000-0.950000-19-04-2025 02-51-02.txt  100000-50000-0.670000-0-01-05-2025 16-09-32.txt  2000-50000-0.670000-0.950000-16-05-2025 09-41-15.txt
Benchmarking/DataVisualization/LanguageComparison/: plot.py  plottps.py
Benchmarking/DataVisualization/Psql/: create_psql.py
Benchmarking/DataVisualization/kdb/: create.py
Benchmarking/OrderMatchingCpp/: CommonTypes.h  FileLogger.cpp  KDBLogger.cpp  KDBLogger.h  Order.h  OrderBook.cpp  OrderBook.h  OrderType.h  PostgresThreadedLogger.cpp  SideEnum.h  main.cpp  readme.txt
Benchmarking/OrderMatchingJava/src/: Main.java  OrderBook.java
Benchmarking/OrderMatchingPy/: Order.py  OrderType.py  main.py
BenchmarkingData/: linux results  psqlResults  restResults
Communication/Kafka/consumer/: consumer  consumer.cpp
Communication/Kafka/producer/: producer  producer.cpp
Communication/kafka/consumer/: consumer.cpp
Communication/rest/Cpp-crow-server/: main.cpp
Communication/rest/Cpp-reciever/: CMakeLists.txt  a.out  main.cpp
Communication/rest/Python/PythonRestReciever/: Server.py
Communication/rest/Python/PythonServer/: Server.py
Communication/rest/k6/: test.js
Communication/sockets/client/: client
Communication/sockets/client-new-con/: client-new-con  client-new-con.cpp
Communication/sockets/server/: server  server.cpp
Communication/udp/sender/: sender  sender.cpp
DataVisualization/LanguageComparison/: plotpythonvspython.py
Exchange/: Presentation.potx  Presentation.pptx  README.md  docker-compose.yml
Exchange/MatchingEngine/: CMakeLists.txt  Dockerfile
Exchange/MatchingEngine/src/: CMakeLists.txt  CommonTypes.h  OrderBook.cpp  OrderBook.h  OrderType.h  main.cpp
Exchange/MatchingEngine/src/book/: OrderBook.cpp  OrderBook.h
Exchange/MatchingEngine/src/common/: CommonTypes.h  Order.h  OrderType.h  SafeQueue.h  Utils.h
Exchange/MatchingEngine/src/core/: EngineConfig.h  MatchingEngine.cpp  MatchingEngine.h
Exchange/MatchingEngine/src/io/dissemination/: DisseminationEvent.h  Distributor.cpp  Distributor.h
Exchange/MatchingEngine/src/io/kafka/reading/: KafkaReader.cpp  KafkaReader.h
Exchange/MatchingEngine/src/io/kafka/writing/: KafkaWriter.cpp  KafkaWriter.h  NotificationEvent.h
Exchange/MatchingEngine/src/io/logging/: LogEvent.h  Logger.cpp  Logger.h
Exchange/MatchingEngine/test/: CMakeLists.txt  KafkaParserTest.cpp  OrderBookTest.cpp
Exchange/NotificationService/: Dockerfile  pom.xml
Exchange/NotificationService/src/main/java/com/example/notification/controllers/: NotificationController.java
Exchange/NotificationService/src/main/java/com/example/notification/service/: KafkaConsumerService.java
Exchange/NotificationService/src/main/java/com/example/notification/store/: NotificationStore.java
Exchange/NotificationService/src/main/resources/: application.properties
Exchange/RestServer/: CMakeLists.txt  Dockerfile
Exchange/RestServer/src/: CMakeLists.txt  main.cpp
Exchange/RestServer/src/entities/: CancelOrderReq.h  LimitOrderReq.h
Exchange/RestServer/src/entities/parsers/: OrderToCsv.h  RequestToOrder.h
Exchange/RestServer/src/kafka/: OrderSender.cpp  OrderSender.h
Exchange/RestServer/src/service/: OrderService.h
Exchange/SocketServer/: CMakeLists.txt  Dockerfile
Exchange/SocketServer/src/: CMakeLists.txt  main.cpp
Exchange/SocketServer/src/entities/: MarketOrderReq.h
Exchange/SocketServer/src/entities/parsers/: OrderToCsv.h  RequestToOrder.h
Exchange/SocketServer/src/kafka/: OrderSender.cpp  OrderSender.h
Exchange/SocketServer/src/service/: OrderService.h
Exchange/SocketServer/test/: CMakeLists.txt  ServerTest.cpp
Exchange/Testing/: Dockerfile  initialResults.txt
Exchange/Testing/python/: ws.py
Exchange/Testing/rest/: Dockerfile
Exchange/Testing/rest/k6/: allTypestest.js  test.js
Exchange/Testing/rest/latency/: ws.py
Exchange/Testing/rest/throughput/: allTypestest.js  test.js
Exchange/Testing/socket/: client.cpp
Exchange/Testing/socket/latency/: latency-socket.cpp
Exchange/Testing/socket/throughput/: client.cpp
OrderMatching/: CMakeLists.txt  CommonTypes.h  FileLogger.cpp  FileLogger.h  KDBLogger.cpp  KDBLogger.h  Order.h  OrderBook.cpp  OrderBook.h  OrderType.h  PostgresLogger.cpp  PostgresLogger.h  PostgresThreadedLogger.cpp  PostgresThreadedLogger.h  SideEnum.h  main.cpp
OrderMatchingJava/untitled/src/: Main.java  Order.java  OrderBook.java  OrderType.java
OrderMatchingPy/: Orderbook.py  Side.py  main.py
data-gen/: gen.cpp  orders.txt
data-gen/outputs/: 1000-10000-0.670000-0.950000-05-04-2025 18-22-30.txt  200-10000-23-00-18-02-2025.txt  3000-100000-23-02-18-02-2025.txt  30000-50000-21-06-15-02-2025.txt
exchange/MatchingEngine/src/: CMakeLists.txt  OrderBook.h  SideEnum.h
exchange/MatchingEngine/test/: OrderBookTest.cpp
(+9 files in other folders)
